# ChessBot

./: README.md  pyproject.toml
chessbot/: data.py  train.py
notebooks/: Untitled.ipynb  dev.ipynb
scripts/: parse_data.py
