[tool.poetry]
name = "chessbot"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
tqdm = "^4.64.0"
chess = "^1.9.2"
jupyterlab = "^3.4.3"
black = "^22.3.0"
gym-chess = {git = "https://github.com/genyrosk/gym-chess"}
bgzip = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
