[tool.poetry]
name = "chessbot"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
packages = [
    { include = "chessbot" },
    { include = "mingpt" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
tqdm = "^4.64.0"
chess = "^1.9.2"
jupyterlab = "^3.4.3"
black = "^22.3.0"
gym-chess = {git = "https://github.com/genyrosk/gym-chess"}
bgzip = "^0.4.0"
torch = "^1.11.0"
pytest = "^7.1.2"
pytorch-lightning = "^1.6.4"
more-itertools = "^8.13.0"
ipywidgets = "^7.7.1"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
